--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ dependencies = [
     "requests>=2.32.3",
     "joblib>=1.4.2",
     "librosa>=0.10.2.post1",
+    "tqdm>=4.66.6",
+    "pandas>=2.2.3",
 ]
 requires-python = "==3.11.*"
 readme = "README.md"
