--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,8 +12,10 @@ dependencies = [
     "requests>=2.32.3",
     "joblib>=1.4.2",
     "librosa>=0.10.2.post1",
-    "tqdm>=4.66.6",
+    "tqdm>=4.67.0",
     "pandas>=2.2.3",
+    "nvidia-pytriton>=0.5.13",
+    "scipy>=1.14.1",
 ]
 requires-python = "==3.11.*"
 readme = "README.md"
