--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "pandas>=2.2.3",
     "nvidia-pytriton>=0.5.13",
     "scipy>=1.14.1",
+    "soundfile>=0.12.1",
 ]
 requires-python = "==3.11.*"
 readme = "README.md"
