--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,13 @@ description = "Default template for PDM package"
 authors = [
     {name = "Alex Laletin", email = "alex.klark.laletin@yandex.com"},
 ]
+readme = "README.md"
+license = {text = "MIT"}
+
+requires-python = "==3.11.*"
 dependencies = [
     "click>=8.1.7",
     "pydub>=0.25.1",
-    "pytest>=8.3.3",
     "requests>=2.32.3",
     "joblib>=1.4.2",
     "librosa>=0.10.2.post1",
@@ -18,10 +21,17 @@ dependencies = [
     "scipy>=1.14.1",
     "soundfile>=0.12.1",
 ]
-requires-python = "==3.11.*"
-readme = "README.md"
-license = {text = "MIT"}
 
+[dependency-groups]
+test = [
+    "pytest>=8.3.3",
+]
+lint = [
+    "ruff>=0.8.0",
+]
+dev = [
+    "pre-commit>=4.0.1",
+]
 
 [tool.pdm]
 distribution = false
