feat: Filtering samples by ASR

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "nvidia-pytriton>=0.5.13",
     "scipy>=1.14.1",
     "soundfile>=0.12.1",
+    "jiwer>=3.0.5",
 ]
 
 [dependency-groups]
