feat: Loading data to Postgres and Launching Metabase

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,11 @@ TRITON_GRPC_PORT=8521
 TRITON_METRICS_PORT=8522
 
 NVIDIA_VISIBLE_DEVICES=all
+
+POSTGRES_USER=[POSTGRES_USER]
+POSTGRES_PASSWORD=[POSTGRES_PASSWORD]
+POSTGRES_DB=[POSTGRES_DB_NAME]
+POSTGRES_PORT=5432
+POSTGRES_ADDRESS=localhost
+
+METABASE_PORT=3000
