--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,9 @@ dependencies = [
     "scipy>=1.14.1",
     "soundfile>=0.12.1",
     "jiwer>=3.0.5",
+    "SQLAlchemy>=2.0.37",
+    "python-dotenv>=1.0.1",
+    "psycopg>=3.2.3",
 ]
 
 [dependency-groups]
