feat: LakeFS object storage integration

--- a/.env.example
+++ b/.env.example
@@ -12,5 +12,11 @@ POSTGRES_ADDRESS=localhost
 
 METABASE_PORT=3000
 
+# LakeFS Configuration
+LAKEFS_ADDRESS=http://[YOUR_IP_ADDRESS]
+LAKEFS_PORT=[YOUR_LAKEFS_PORT]
+LAKEFS_ACCESS_KEY_ID=[YOUR_ACCESS_KEY_ID]
+LAKEFS_SECRET_KEY=[YOUR_SACRET_KEY]
+
 # For testing
 TEST_RAW_AUDIO_PATH=data/test/raw_audio
